<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mydomo.ui.accueil.AccueilFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/nav_clock"
        android:name="com.example.mydomo.ui.alarme.AlarmeFragment"
        android:label="@string/menu_alarme"
        tools:layout="@layout/fragment_alarme" />

    <fragment
        android:id="@+id/nav_chambre"
        android:name="com.example.mydomo.ui.chambre.ChambreFragment"
        android:label="@string/menu_chambre"
        tools:layout="@layout/fragment_capteur_chambre" />

    <fragment
        android:id="@+id/nav_salon"
        android:name="com.example.mydomo.ui.salon.SalonFragment"
        android:label="@string/menu_salon"
        tools:layout="@layout/fragment_capteur_salon" />



</navigation>