<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.salonAct.Mouvement"
    android:layout_marginTop="50dp"
    android:orientation="horizontal">


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mouvement"
                style="@style/titre"/>

            <WebView
                android:id="@+id/afficheFieldMouv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

            </WebView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="200dp">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mouvActuel"
                    style="@style/titreMenu"/>

                <TextView
                    android:id="@+id/afficheMouvActuel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/titreMenu"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="100dp">

                <Button
                    android:id="@+id/buttonHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonHome"
                    style="@style/btBasGauche"/>

                <Button
                    android:id="@+id/buttonVersMouv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonVersTmp"
                    style="@style/btBasDroit"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/buttonRefresh"
                    style="@style/btSuivant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonRefresh" />

            </LinearLayout>



        </LinearLayout>


    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>