<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.accueil.AccueilFragment"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/maison"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titre_capteur_mouv"
            android:layout_marginTop="0dp"
            style="@style/titre"/>


        <TextView
            android:id="@+id/afficheSalonActuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_salon"
            android:layout_marginTop="-20dp"
            style="@style/titreMenu"/>


        <TextView
            android:id="@+id/afficheMouvementSalonActuel"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            style="@style/titre"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_chambre"
            android:layout_marginTop="-20dp"
            style="@style/titreMenu"/>


        <TextView
            android:id="@+id/afficheMouvementChambreActuel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            style="@style/titre"/>


        <Button
            android:layout_marginTop="-20dp"
            android:id="@+id/buttonNotif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="recharger"/>


    </LinearLayout>



</LinearLayout>

