<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chambre.ChambreFragment"
    android:layout_marginTop="0dp"
    android:orientation="horizontal"
    android:background="@color/white">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_chambre"
            android:layout_marginBottom="40dp"
            style="@style/titreMenu" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-40dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">


                <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="200dp">


                    <WebView
                        android:id="@+id/afficheMouvementActuel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />


                </LinearLayout>


                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/mouvActuel"
                    style="@style/normaltext"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">


                <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="200dp">


                    <WebView
                        android:id="@+id/afficheTempActuel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tempActuel"
                    style="@style/normaltext"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">


                <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="200dp">


                    <WebView
                        android:id="@+id/afficheLumiActuel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />


                </LinearLayout>


                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/lumiActuel"
                    style="@style/normaltext"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">


                <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="200dp">


                    <WebView
                        android:id="@+id/afficheHumiActuel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidActuel"
                    style="@style/normaltext"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>




</FrameLayout>